# fastapi-starter

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  environment.yml  main.py  mcp.py  mcp_client.py  mcp_main.py  pyproject.toml  pyrightconfig.json  readme.md  ruff.toml
app/controller/: book_controller.py  test_book_controller.py
app/dto/request/: book_create_req.py  book_get_req.py  book_list_req.py  book_req.py
app/dto/response/: book_get_res.py
app/model/: base_repository.py  book.py
app/queues/: demo_queue.py
app/repository/: book_repository.py
app/repository/params/: book_filter.py  book_repository_param.py
app/service/: book_service.py
config/: app_config.py  crontab_config.py  mcp_config.py  mysql_config.py  rabbitmq_config.py
config/base/: base_nacos_config.py
controller/: book_controller.py
core/: config.py  context.py  exception_handle.py  lifespan.py  logger.py  mysql.py  openapi.py  response.py  status_enum.py
core/crontab/: crontab.py
core/di/: container.py
core/dto/: base_res.py  common_res.py  page_req.py  page_res.py
core/exception/: runtime_exception.py
core/exception/handle/: exception_handle.py
core/mcp/: mcp.py  operation_enums.py
core/mcp_server/: mcp.py  openapi.py  operation_enums.py
core/mysql/: base_filter.py  base_mysql.py  base_mysql_session.py  base_repository.py  mysql.py  page_resource.py
core/mysql/orm/: auto_time.py  base_sql_model.py
core/rabbitmq/: base_consumer.py  base_producer.py  rabbitmq.py
core/redis/: redis.py
core/types/: types.py
core/util/: datetime.py  feishu_robot.py  helper.py
dto/request/: book_get_req.py
exception/: runtime_exception.py
model/: book.py
repository/: book_repository.py
routes/: routes.py
service/: book_service.py
src/: main.py
src/app/controller/: book_controller.py
src/config/: app_config.py  mysql_config.py  nacos_config.py  redis_config.py
src/core/: config.py  context.py  lifespan.py  logger.py  openapi.py
src/routes/: routes.py
tests/: conftest.py
util/: runtime.py
(+18 files in other folders)
