[project]
name = "fast-api-template"
version = "0.1.0"
description = "fastapi 脚手架"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
]
