[project]
name = "fastapi-starter"
version = "0.1.0"
description = "fastapi 脚手架"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.5",
    "aiomysql>=0.2.0",
    "apscheduler>=3.11.0",
    "fastapi>=0.115.11",
    "mcp>=1.11.0",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "nacos-sdk-python>=2.0.6",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "redis>=6.0.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.1.0",
    "pyright>=1.1.396",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
package = false

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
